--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>Number</p>
             <p>Status</p>
             <p>Date</p>
-            <p>Duration(sec)</p>
+            <p>Duration(secs)</p>
         </div>
 
     
