--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
         <button class="btn" id="deepak" >Deepak</button>
         <button class="btn" id="rosy" >Rosy</button>
         <button class="btn" id="pinkky" >Pinkky</button>
-
+  
+<button class="btn" id="charu" >Charu</button>
+<button class="btn" id="neelima" >Neelima</button>
+<button class="btn" id="suuchi" >Suuchi</button>
+<button class="btn" id="hermeet" >Hermeet</button>
+<button class="btn" id="rajneesh" >Rajneesh</button>
 
         <select name="category" id="category-select">
             <option value="All">All</option>
