--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
 <button class="btn" id="hermeet" >Hermeet</button>
 <button class="btn" id="rajneesh" >Rajneesh</button>
 
-        <select name="category" id="category-select">
-            <option value="All">All</option>
-            <option value="Completed">Completed</option>
-            <option value="No-answer">Unaswered</option>
-            <option value="Failed">Failed</option>
-        </select>
+        
     </div>
 
+    <div id="select">
+    <select name="category" id="category-select">
+        <option value="All">All</option>
+        <option value="Completed">Completed</option>
+        <option value="No-answer">Unaswered</option>
+        <option value="Failed">Failed</option>
+    </select>
+</div>
+    
     <div id="table" class="container">
         <div>
             <p>Number</p>
