--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+        <script src="https://wchat.freshchat.com/js/widget.js"></script>
+
 </head>
 <body>
     <div id="buttons" class="container">
@@ -44,6 +46,12 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+    window.fcWidget.init({
+      token: "145e2eba-7810-4539-b913-14b8d207a9e9",
+      host: "https://wchat.freshchat.com"
+    });
+  </script>
     <script src="script.js"></script>
 </body>
 </html>
