--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 <button class="btn" id="hermeet" >Hermeet</button>
 <button class="btn" id="rajneesh" >Rajneesh</button>
 
+
+
+<button class="btn" id="rekha" >Rekha</button>
+<button class="btn" id="shalini" >Shalini</button>
+<button class="btn" id="mahendra" >Mahendra</button>
+<button class="btn" id="alpana" >Alpana</button>
+<button class="btn" id="yojna" >Yojna</button>
+<button class="btn" id="usha" >Usha</button>
+
 </div>
 
 
