--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 <button class="btn" id="alpana" >Alpana</button>
 <button class="btn" id="yojna" >Yojna</button>
 <button class="btn" id="usha" >Usha</button>
+        
+        <button class="btn" id="prateek" >Prateek</button>
+<button class="btn" id="mahesh" >Mahesh</button>
+<button class="btn" id="kawaljeet" >Kawaljeet</button>
 
 </div>
 
