--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 <button class="btn" id="mahesh" >Mahesh</button>
 <button class="btn" id="kawaljeet" >Kawaljeet</button>
 
+
+<button class="btn" id="ashish" >Ashish</button>
+<button class="btn" id="manorma" >Manorma</button>
+
 </div>
 
 
